--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,13 @@
  *= require_self
  *= require_tree .
  */
+@import "bootstrap";
+body {
+			padding-bottom: 40px;
+			padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+			background-color: #fff;
+			background-image: url(background.png);
+			background-repeat: repeat-x;
+			background-position: 0 0px;
+}
+@import "bootstrap-responsive";
